# remarks

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  Notes on rendering.md  README.md  RemarkableNotebookType.py  SETUP_GUIDE.md  conftest.py  datatest.py  default.nix  docker-compose.yml  download_remarkable_fonts.sh  flake.nix  large_file.py  pdf_test_support.py  pyproject.toml  release.sh  remarks.nix  run-docker.sh  setup.sh  test_initial.py  test_obsidian.py  test_orphaned_pages.py  test_pdf.py  test_support.py  test_tag_sanitization.py  test_unit.py  test_visual.py  testing.md  testloop.sh
.githooks/: pre-commit
.github/workflows/: ci.yml
deployment/: Makefile
deployment/remarks-server/: flake.nix  pyproject.toml  remarks-server.Dockerfile  server.py
remarks/: Document.py  __init__.py  __main__.py  dimensions.py  metadata.py  remarks.py  server.py  utils.py  warnings.py
remarks/conversion/: __init__.py  drawing.py  parsing.py  rendering.py  template.py  text.py
remarks/output/: ObsidianMarkdownFile.py  PdfFile.py  obsidian_markdown.md.jinja  obsidian_markdown.py  org.py  pdf.py
server/: server.py
tests/: Inspections.py  NotebookMetadata.py  notebook_fixtures.py  pdf_test_support.py
tests/in/: RMPP - colors.rmn  annoying filename.rmn  empty_document.rmn  multi-line highlights.rmn  orphaned rm file.rmn  rmpp - expanded margins.rmn  rmpp - shader tool.rmn  rmpp - typed text long.rmn  rmpp - typed text.rmn  rmpp - v6 - black and white only.rmn  rmpp - v6 - various colors.rmn  v2 notebook complex.rmn  v3 markdown tags.rmn
(+13 files in other folders)
