[tool.poetry]
name = "remarks"
version = "0.3.10"
description = "Extract annotations (highlights and scribbles) from PDF, EPUB, and notebooks marked with reMarkable™ paper tablets. Export to Markdown, PDF, PNG, and SVG."
authors = ["Laura <https://github.com/azeirah>"]
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://github.com/lucasrla/remarks"
keywords = ["remarkable-tablet", "remarkable", "markdown", "png", "pdf", "svg", "annotations", "highlights", "scribbles"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Utilities"
]

# https://python-poetry.org/docs/dependency-specification/
[tool.poetry.dependencies]
python = "^3.10"
Shapely = "^1.8.5.post1"
PyMuPDF = "1.22.5"
rmscene = "0.6.0"
pyyaml = "^6.0.1"
parsita = "^2.1.1"
numpy = "^2.2.1"
flask = "^3.1.0"

[tool.poetry.extras]
server = ["flask"]

[tool.poetry.scripts]
remarks = 'remarks.__main__:main'
remarks-server = "server.__main__:main"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
pytest = {version = "^7.2.0", extras = []}
tqdm = "^4.67.1"

[build-system]
# https://python-poetry.org/docs/pyproject/#poetry-and-pep-517
# https://github.com/python-poetry/poetry/releases/tag/1.3.0
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "markdown"
]
